Modify image picker button location